--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cointax",
   "version": "1.0.0",
   "description": "*Vad behöver göras för att ditt program ska starta och gå och använda?*",
-  "source": "./*.html",
+  "source": "app.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel --port 3333"
+    "start": "parcel --port 3332"
   },
   "repository": {
     "type": "git",
