Har gått igenom att alla krav är uppfyllda och rensat bort gammal död kod

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "cointax",
   "version": "1.0.0",
   "description": "*Vad behöver göras för att ditt program ska starta och gå och använda?*",
-  "source": "app.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel --port 3331"
+    "start": "parcel ./*.html --port 3333"
   },
   "repository": {
     "type": "git",
