--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parcel": "^2.4.1"
   },
   "dependencies": {
+    "nanoid": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
