--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel ./*.html --port 3333 --open"
+    "start": "run-p start:dev start:api",
+    "start:api": "dotnet run --project ../CointaxAPI/cointaxAPI.csproj",
+    "start:dev": "parcel ./*.html --port 3333 --open"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "dependencies": {
     "localbase": "^0.7.5",
     "nanoid": "^3.3.3",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
